# RoboticsAcademy

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RoboticsAcademy.html  TODO.txt  TODO_ENGLISH.txt  _config.yml  compose.yaml  db.sqlite3  dev_script.sh  docker-compose-cpu.yaml  docker-compose-user.yml  docker-compose.yaml  docker-compose.yml  instructions.json  manage.py  package-lock.json
_data/: navigation.yml  ui-text.yml
_includes/: feature_row
_pages/: developer_guide.md  exercises.md  gpu_acceleration.md  home.md  installation.md  roadmap.md  status.md  user_guide.md  webrelease.md
_site/: 404.html  feed.xml  index.html  sitemap.xml  webrelease.html
academy/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
compose_cfg/: dev_humble_cpu.yaml  dev_humble_cpu.yaml.orig  dev_humble_gpu.yaml  dev_humble_nvidia.yaml  dev_noetic_cpu.yaml  user_humble_cpu.yaml  user_humble_gpu.yaml  user_humble_nvidia.yaml  user_noetic_cpu.yaml
debian/: changelog
docs/: .gitignore  FARM.md  Gemfile  ID_exercises_list.txt  InstructionsForDevelopers.md  README.md  RepositoryArchitecture.md  Unibotics-architecture.md  _config.yml  clientside.md  database.md  develop_binding_volumes.md  exercise-status.md  exercise_details.md  functionality.md  generate_a_mini_radi.md  generate_a_radi.md  generate_radi_base_and_pre-base.md  gpu_acceleration.md  new-ram-development.md  package-lock.json  requirements.txt  (+2 more)
exercises/drone_cat_mouse/cat_mouse_cpp/cat_drone/: CMakeLists.txt  cat.cfg  drone_sensors.h  object_detected.h
exercises/static/exercises/follow_face/: CMakeLists.txt  MyAlgorithm.py  README.md  follow_face.py  follow_face_conf.yml  pantilt_teleop.in  resources_rc.py
exercises/static/exercises/follow_face/gui/: threadGUI.py  ui_gui.ui
src/ardrone_cat_mouse/cat_drone/: CMakeLists.txt  cat.xml  cat_config.cpp  cat_config.h  drone_sensors.cpp  object_detected.cpp  parser.h  quaternion.h
src/ardrone_cat_mouse/mouse_drone/: CMakeLists.txt  mouse.cpp  mouse.h  path.xml  travel.cpp  travel.h
src/ardrone_cat_mouse/mouse_drone/config/: travel_config.cpp
src/bump_and_go/cpp/: CMakeLists.txt  introrob_qt.pro  main.cpp
src/bump_and_go/cpp/gui/: stategui.h  threadupdategui.h
src/bump_and_go/cpp/gui/widget/: cameraswidget.h  controlvw.cpp  glwidget.h  laserwidget.cpp  laserwidget.h
src/bump_and_go_py/visualStates_py/: CMakeLists.txt  install_manifest.txt  visualStates.py
src/bump_and_go_py/visualStates_py/codegen/cpp/: runtimegui.h  state.h  temporaltransition.h  test.cpp  transition.h
src/bump_and_go_py/visualStates_py/codegen/python/: runtimegui.py  state.py  testipc.py
src/bump_and_go_py/visualStates_py/gui/: cmakevars.py  codedialog.py  cppgenerator.py  cppparser.py  cpprosgenerator.py  guistate.py  librariesdialog.py  optype.py  pythongenerator.py  pythonrosgenerator.py  state.py  timerdialog.py  transition.py  transitioncodedialog.py  transitiontype.py  treenode.py  visualstates.py
src/drone_cat_mouse/cat_mouse_cpp/mouse_drone/: CMakeLists.txt  drone_sensors.h
src/drone_cat_mouse/cat_mouse_cpp/mouse_drone/config/: drone_config.h  mouse_config.h  path_config.h
src/drone_hangar/referee/: CMakeLists.txt  referee  referee.yml
src/introrob/: API.cpp  API.h  CMakeLists.txt  MyAlgorithms.cpp  control.cpp  control.h  drawarea.cpp  drawarea.h  gui.cpp  gui.h  introrob.cfg  introrob.cpp  introrob.glade  pioneeropengl.c  pioneeropengl.h  robot1introrob.cfg  robot2introrob.cfg
src/introrob/cameras/: calibA  calibA.xml  calibB  calibB.xml
src/introrob/nbproject/: Package-Default.bash  configurations.xml  project.xml
src/introrob/nbproject/private/: Default.properties  configurations.xml
src/labyrinth_escape/src/: CMakeLists.txt  introrob_py
src/labyrinth_escape/src/gui/: communicator.py  sensorsWidget.py
src/rescue_people/: CMakeLists.txt  MyAlgorithm.py  README.md  main.py  rescue_people.py  resources_rc.py
src/rescue_people/gazebo/models/ArDrone/: model.config
src/rescue_people/gazebo/models/ArDrone/meshes/hokuyo_utm30lx/: hokuyo_utm_30lxTEST_SELF_FILTER.dae
src/rescue_people/gazebo/models/ArDrone/meshes/hokuyo_utm30lx/blender/: hokuyo_utm30lx.blend
src/rescue_people/gazebo/models/ArDrone/meshes/kinect_camera/: kinect_camera_simple.stl
src/rescue_people/gazebo/models/ArDrone/meshes/quadrotor/: quadrotor_2.stl  quadrotor_3.dae
src/rescue_people/gazebo/models/ArDrone/meshes/quadrotor/blender/: quadrotor_2.blend  quadrotor_3.blend1  quadrotor_CAD.blend  quadrotor_CAD2.blend  quadrotor_CAD2.blend1
src/rescue_people/gazebo/models/ArDrone/meshes/thermaleye_camera/: thermaleye_camera_hector_v1.stl  thermaleye_camera_hector_v2.stl
src/rescue_people/gazebo/models/face1/: model.config  model.sdf
src/rescue_people/gazebo/models/face1/materials/scripts/: face1.material
src/rescue_people/gazebo/models/face2/: model.config  model.sdf
src/rescue_people/gazebo/models/face2/materials/scripts/: face2.material
src/rescue_people/gazebo/models/face3/: model.config  model.sdf
src/rescue_people/gazebo/models/face3/materials/scripts/: face3.material
src/rescue_people/gazebo/models/face4/: model.config  model.sdf
src/rescue_people/gazebo/models/face4/materials/scripts/: face4.material
src/rescue_people/gazebo/models/face5/: model.config  model.sdf
src/rescue_people/gazebo/models/face5/materials/scripts/: face5.material
src/rescue_people/gazebo/models/face6/: model.config  model.sdf
src/rescue_people/gazebo/models/face6/materials/scripts/: face6.material
src/rescue_people/gazebo/models/rescue_area/: model.config  model.sdf
src/rescue_people/gazebo/models/rescue_area/materials/scripts/: rescue_area.material
src/rescue_people/gazebo/worlds/: ArDrone_rescue-people.world
src/rescue_people/gui/: GUI.py  attitudeIndicator.py  cameraWidget.py  communicator.py  sensorsWidget.py  ui_gui.py  ui_gui.ui
src/rescue_people/sensors/: sensor.py
src/rescue_people/src/: introrob_py_simulated.cfg
src/rescue_people/src/gui/: GUI.py  ui_gui.ui
src/rescue_people/src/sensors/: sensor.py
(+4555 files in other folders)
