if( ICE_PY_MODULES AND NUMPY_MODULES AND MATPLOTLIB_PY_MODULES)
	#instal	
	INSTALL (FILES referee.py referee.cfg
		DESTINATION share/jderobot/python/referee
		OPTIONAL
		COMPONENT core
	)
	INSTALL (PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/referee DESTINATION bin OPTIONAL COMPONENT core)

endif(ICE_PY_MODULES AND NUMPY_MODULES AND MATPLOTLIB_PY_MODULES)
