
if( ICE_PY_MODULES AND NUMPY_MODULES AND OpenCV_PY_MODULES AND QT4_PY_MODULES AND QWT5_PY_MODULES)
	#install
	INSTALL (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/sensors DESTINATION share/jderobot/python/introrob_py PATTERN .svn )
	INSTALL (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/gui DESTINATION share/jderobot/python/introrob_py PATTERN .svn )
	INSTALL (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/resources DESTINATION share/jderobot/python/introrob_py PATTERN .svn )
	INSTALL (FILES ${CMAKE_CURRENT_SOURCE_DIR}/main.py DESTINATION share/jderobot/python/introrob_py OPTIONAL PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE WORLD_READ)
	INSTALL (FILES ${CMAKE_CURRENT_SOURCE_DIR}/MyAlgorithm.py DESTINATION share/jderobot/python/introrob_py )

	INSTALL (FILES ${CMAKE_CURRENT_SOURCE_DIR}/introrob_py DESTINATION bin OPTIONAL PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE WORLD_READ)

endif(ICE_PY_MODULES AND NUMPY_MODULES AND OpenCV_PY_MODULES AND QT4_PY_MODULES AND QWT5_PY_MODULES)


